Fix: add margin to footer links on mobile to increase tap targets

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -492,6 +492,7 @@ footer {
 
 footer li {
     list-style-type: none;
+    margin-bottom: 1.5em;    
 }
 
 footer li a {
